--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>Curriculum Vitae</title>
   </head>
   <body>
@@ -20,7 +20,7 @@
               Administration and a MSc. in Business Analytics from Northwestern
               University.
             </p>
-            <div class="education">
+            <div>
               <br />
               <h3>Education</h3>
               <p>
@@ -48,9 +48,9 @@
             <ul class="contact-list">
               <li>Elizabeth Smith</li>
               <li>Colorado, United States</li>
-              <li><a href="tel:+123-456-7891">Reach me by phone!</a></li>
+              <li><a  href="tel:+123-456-7891">Reach me by phone!</a></li>
               <li>
-                <a href="mailto:elizabeth.smith@novoresume.com">Email me</a>
+                <a  href="mailto:elizabeth.smith@novoresume.com">Email me</a>
               </li>
               <li><a href="http://www.elizabeth-smith.com">My Website</a></li>
               <li>
